# norfair-ros

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: config.yaml  converter.yaml  norfair.yaml  video_writer.yaml
launch/: norfair_node.launch
msg/: Detection.msg  Detections.msg
src/: converter.py  main.py  nodes_doc.md  norfair_node.py  run.py  video_writer.py
test/config/: tracker.yaml
test/launch/: test.launch
test/src/: tracker_output.py
